# GPT-hub

./: .env.example  .gitignore  AGENTS.md  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONSTRUCTOR.md  CONTRIBUTING.md  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  openrouter-catalog.yml
docs/: AGENT_HANDOFF_EXTERNAL_REPO.md  AGENT_HANDOFF_SCANOVICH.md  CLOUDFLARE_TUNNEL_HANDOFF.md  DEMO_PROMPTS.md  DOC_INVENTORY.md  HACKATHON_STARTER.md  HACKATHON_TEAM_SYNC.md  ISSUES_REPLY_DRAFTS_USATOV.md  OPENWEBUI_ROLES.md  PITCH-DEMO.md  PRIVATE_REPO_SETUP.md  PROMPT_PRECEDENCE.md  README.md  TEAM_PUBLIC_ACCESS.md  WEBUI-PAYLOAD.md  ZERO_ENTRY.md
docs/reviews/: 2026-04-02-multi-version-audit.md  (+1 more)
versions_dep/: LEGACY.md
versions_dep/v3/apps/orchestrator/: CHANGELOG.md  README.md  pyproject.toml
versions_dep/v3/apps/orchestrator/gpthub_orchestrator/: __init__.py  classifier.py  main.py  model_registry.py  reasoning_response_filter.py  router.py  settings.py  trace.py
versions_dep/v3/apps/orchestrator/gpthub_orchestrator/data/: model_roles.yaml  role_prompts.yaml
versions_dep/v3/apps/orchestrator/gpthub_orchestrator/ingest/: __init__.py  pdf_extract.py
versions_dep/v3/apps/orchestrator/gpthub_orchestrator/tools/: __init__.py  list_free_models.py
versions_dep/v3/apps/orchestrator/tests/: test_classifier.py  test_classifier_greeting.py  test_greeting_canned.py  test_main_fallback.py  test_model_registry.py  test_models_proxy.py  test_router.py  test_routing_golden.py
(+91 files in other folders)
